<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_inverted"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:scaleType="fitCenter"
            android:src="@drawable/login_logo" />
        <com.questionpro.views.CustomEditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="60dp"
            android:background="#AAFFFFFF"
            android:ems="10"
            android:windowSoftInputMode="stateHidden"
            android:hint="@string/first_name"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:padding="10dp" />
        <com.questionpro.views.CustomEditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="#AAFFFFFF"
            android:ems="10"
            android:hint="@string/last_name"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:padding="10dp" />
        <com.questionpro.views.CustomEditText
            android:id="@+id/emailAddress"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="#AAFFFFFF"
            android:ems="10"
            android:hint="@string/email_address"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:padding="10dp" />
        <com.questionpro.views.CustomEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="#AAFFFFFF"
            android:ems="10"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:padding="10dp" />
        <com.questionpro.views.CustomEditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="#AAFFFFFF"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:padding="10dp" />
        <com.questionpro.views.CustomEditText
            android:id="@+id/companyCode"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="#AAFFFFFF"
            android:ems="10"
            android:hint="@string/company_code"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:padding="10dp" />


        <com.questionpro.views.CustomTextView
            android:id="@+id/invalidEmailPassswordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/invalid_email_password"
            android:textColor="@color/error_message_color"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="invisible" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.questionpro.views.CustomButton
                android:id="@+id/registerButton"
                style="@style/AppTheme.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:text="@string/register"
                android:textColor="@android:color/white" />

            <ProgressBar
                android:id="@+id/signInProgress"
                style="@android:style/Widget.ProgressBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="20dp"
                android:elevation="7dp"
                android:foregroundTint="@color/colorAccent"
                android:visibility="invisible" />
        </RelativeLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
            <com.questionpro.views.CustomTextView
                android:id="@+id/alreadyMemberText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_registered"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                />
            <com.questionpro.views.CustomTextView
                android:id="@+id/loginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_u"
                android:layout_marginLeft="2dp"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>
