<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_inverted"
    android:padding="20dp">
    <com.questionpro.views.CustomTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:text="@string/reset_password_description"
        android:textColor="@color/forgot_pswd_text_color"
        android:layout_marginTop="10dp"/>

    <com.questionpro.views.CustomEditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textEmailAddress"
        android:background="#AAFFFFFF"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:hint="@string/email_address"
        android:ems="10"
        android:id="@+id/emailAddress" />

    <com.questionpro.views.CustomEditText
        android:id="@+id/companyCode"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#AAFFFFFF"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/company_code"
        android:inputType="text"
        android:padding="10dp" />

    <com.questionpro.views.CustomTextView
        android:id="@+id/invalidEmailPassswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"
        android:textColor="#e73827"
        android:text="@string/invalid_email_password"
        android:visibility="invisible" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.questionpro.views.CustomButton
            android:id="@+id/helpActionButton"
            style="@style/AppTheme.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/accent_button_rectangle_selector"
            android:textColor="@android:color/black"
            android:text="@string/reset_password" />

        <ProgressBar
            style="@android:style/Widget.ProgressBar.Small"
            android:id="@+id/helpActionProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:foregroundTint="@color/secondary_text"
            android:elevation="7dp"
            android:visibility="invisible" />
    </RelativeLayout>

</LinearLayout>