<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="50dp"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:background="#A0A0A0">
        <com.questionpro.views.CustomTextView
            android:id="@+id/dialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textSize="20sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="20dp">
        <com.questionpro.views.CustomTextView
            android:id="@+id/dialogText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="5dp"
            android:paddingTop="10dp"
            android:textColorLink="@color/colorAccent"
            android:text="@string/forgot_password_dialog_text"
            android:textColor="@color/secondary_text"
            android:textSize="16sp" />

        <com.questionpro.views.CustomButton
            android:id="@+id/okButton"
            style="@style/AppTheme.Button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/got_it"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@android:color/white" />

    </LinearLayout>

</LinearLayout>