<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="60dp"
            android:paddingBottom="60dp"
            android:background="#11000000"
            android:gravity="center"
            android:orientation="vertical">

            <com.questionpro.whitelabelapps.views.CustomTextView
                android:id="@+id/appName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@color/ms_title_text_color"
                android:textSize="48sp"
                android:textStyle="bold" />

            <com.questionpro.whitelabelapps.views.CustomEditText
                android:id="@+id/emailAddress"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:background="#FFFFFF"
                android:ems="10"
                android:hint="@string/email_place_holder"
                android:imeOptions="actionNext"
                android:inputType="textNoSuggestions"
                android:padding="10dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp">

                <com.questionpro.whitelabelapps.views.CustomEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="#FFFFFF"
                    android:ems="10"
                    android:paddingRight="100dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="10dp"
                    android:hint="@string/password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    />

                <com.questionpro.whitelabelapps.views.CustomTextView
                    android:id="@+id/showPasswordText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/show"
                    android:textColor="@color/secondary_text"
                    android:textSize="14sp"
                    android:layout_toLeftOf="@+id/showPasswordCheck"
                    android:visibility="visible" />
                <ImageButton
                    android:id="@+id/showPasswordCheck"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="#00000000"
                    android:scaleType="centerInside"
                    android:src="@drawable/show_password_icon" />

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/companyCodeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="10dp">

                <com.questionpro.whitelabelapps.views.CustomEditText
                    android:id="@+id/companyCode"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="#AAFFFFFF"
                    android:ems="10"
                    android:hint="@string/company_code"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:padding="10dp" />

                <ImageButton
                    android:id="@+id/whatIsCompanyCode"
                    android:layout_width="30dp"
                    android:layout_height="45dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="#FFFFFF"
                    android:src="@drawable/what_is_icon" />
            </RelativeLayout>
            <com.questionpro.whitelabelapps.views.CustomTextView
                android:id="@+id/invalidEmailPassswordText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/invalid_email_password"
                android:textColor="@color/error_message_color"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="invisible" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.questionpro.whitelabelapps.views.CustomButton
                    android:id="@+id/signInButton"
                    style="@style/AppTheme.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:text="@string/sign_in"
                    android:textStyle="bold"
                    android:textColor="@android:color/white" />

                <ProgressBar
                    android:id="@+id/signInProgress"
                    style="@android:style/Widget.ProgressBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="20dp"
                    android:elevation="7dp"
                    android:foregroundTint="@color/colorAccent"
                    android:visibility="invisible" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <com.questionpro.whitelabelapps.views.CustomTextView
                    android:id="@+id/forgotPasswordButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:paddingTop="10dp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/ms_title_text_color"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/joinNowLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:visibility="gone"
                android:paddingBottom="5dp"
                android:paddingTop="10dp">

                <com.questionpro.whitelabelapps.views.CustomTextView
                    android:id="@+id/newMemberText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_a_member_yet"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp" />

                <com.questionpro.whitelabelapps.views.CustomTextView
                    android:id="@+id/joinNowButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:text="@string/join_now"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>
